--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -439,6 +439,10 @@
     <Compile Include="Migrations\201611261017137_Search.Designer.cs">
       <DependentUpon>201611261017137_Search.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612061904083_ListPaging.cs" />
+    <Compile Include="Migrations\201612061904083_ListPaging.Designer.cs">
+      <DependentUpon>201612061904083_ListPaging.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -805,6 +809,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201611261017137_Search.resx">
       <DependentUpon>201611261017137_Search.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612061904083_ListPaging.resx">
+      <DependentUpon>201612061904083_ListPaging.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
