--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1921,30 +1921,30 @@
     <Content Include="Views\Boards\_ForumGroupPartial.cshtml" />
     <Content Include="Views\Boards\_ForumPost.cshtml" />
     <Content Include="Views\Boards\_SearchBox.cshtml" />
-    <Content Include="Views\Catalog\CategoryNavigation.cshtml" />
+    <Content Include="Views\Catalog\Partials\CategoryNavigation.cshtml" />
     <Content Include="Views\Catalog\CategoryTemplate.ProductsInGridOrLines.cshtml" />
     <Content Include="Views\Catalog\CompareProducts.cshtml" />
-    <Content Include="Views\Catalog\CompareProductsButton.cshtml" />
-    <Content Include="Views\Catalog\FlyoutCompare.cshtml" />
-    <Content Include="Views\Catalog\HomepageBestSellers.cshtml" />
-    <Content Include="Views\Catalog\HomepageCategories.cshtml" />
-    <Content Include="Views\Catalog\HomepageProducts.cshtml" />
+    <Content Include="Views\Catalog\Partials\CompareProductsButton.cshtml" />
+    <Content Include="Views\Catalog\Partials\FlyoutCompare.cshtml" />
+    <Content Include="Views\Catalog\Partials\HomepageBestSellers.cshtml" />
+    <Content Include="Views\Catalog\Partials\HomepageCategories.cshtml" />
+    <Content Include="Views\Catalog\Partials\HomepageProducts.cshtml" />
     <Content Include="Views\Catalog\ManufacturerAll.cshtml" />
-    <Content Include="Views\Catalog\ManufacturerNavigation.cshtml" />
+    <Content Include="Views\Catalog\Partials\ManufacturerNavigation.cshtml" />
     <Content Include="Views\Catalog\ManufacturerTemplate.ProductsInGridOrLines.cshtml" />
-    <Content Include="Views\Catalog\MegaMenu.cshtml" />
-    <Content Include="Views\Catalog\PopularProductTags.cshtml" />
-    <Content Include="Views\Catalog\ProductBreadcrumb.cshtml" />
+    <Content Include="Views\Catalog\Partials\MegaMenu.cshtml" />
+    <Content Include="Views\Catalog\Partials\PopularProductTags.cshtml" />
+    <Content Include="Views\Catalog\Partials\ProductBreadcrumb.cshtml" />
     <Content Include="Views\Catalog\ProductsByTag.cshtml" />
     <Content Include="Views\Catalog\ProductTagsAll.cshtml" />
     <Content Include="Views\Catalog\RecentlyAddedProducts.cshtml" />
     <Content Include="Views\Catalog\RecentlyViewedProducts.cshtml" />
-    <Content Include="Views\Catalog\RecentlyViewedProductsBlock.cshtml" />
+    <Content Include="Views\Catalog\Partials\RecentlyViewedProductsBlock.cshtml" />
     <Content Include="Views\Search\Search.cshtml" />
     <Content Include="Views\Search\SearchBox.cshtml" />
-    <Content Include="Views\Catalog\_FilterPriceBox.cshtml" />
-    <Content Include="Views\Catalog\_FilterSpecsBox.cshtml" />
-    <Content Include="Views\Catalog\_ProductBoxList.cshtml" />
+    <Content Include="Views\Catalog\Partials\_FilterPriceBox.cshtml" />
+    <Content Include="Views\Catalog\Partials\_FilterSpecsBox.cshtml" />
+    <Content Include="Views\Catalog\Partials\_ProductBoxList.cshtml" />
     <Content Include="Views\Shared\Partials\_ProductListOptions.cshtml" />
     <Content Include="Views\Checkout\BillingAddress.cshtml" />
     <Content Include="Views\Checkout\CheckoutProgress.cshtml" />
@@ -2019,33 +2019,33 @@
     <Content Include="Views\PrivateMessages\SentItems.cshtml" />
     <Content Include="Views\PrivateMessages\View.cshtml" />
     <Content Include="Views\Product\AskQuestion.cshtml" />
-    <Content Include="Views\Product\AskQuestionButton.cshtml" />
+    <Content Include="Views\Product\Partials\AskQuestionButton.cshtml" />
     <Content Include="Views\Product\BackInStockSubscribePopup.cshtml" />
-    <Content Include="Views\Product\CrossSellProducts.cshtml" />
+    <Content Include="Views\Product\Partials\CrossSellProducts.cshtml" />
     <Content Include="Views\Product\EmailAFriend.cshtml" />
-    <Content Include="Views\Product\EmailAFriendButton.cshtml" />
-    <Content Include="Views\Product\ProductDetailReviews.cshtml" />
-    <Content Include="Views\Product\ProductManufacturers.cshtml" />
-    <Content Include="Views\Product\ProductsAlsoPurchased.cshtml" />
-    <Content Include="Views\Product\ProductSpecifications.cshtml" />
-    <Content Include="Views\Product\ProductTags.cshtml" />
+    <Content Include="Views\Product\Partials\EmailAFriendButton.cshtml" />
+    <Content Include="Views\Product\Partials\ProductDetailReviews.cshtml" />
+    <Content Include="Views\Product\Partials\ProductManufacturers.cshtml" />
+    <Content Include="Views\Product\Partials\ProductsAlsoPurchased.cshtml" />
+    <Content Include="Views\Product\Partials\ProductSpecifications.cshtml" />
+    <Content Include="Views\Product\Partials\ProductTags.cshtml" />
     <Content Include="Views\Product\ProductTemplate.Grouped.cshtml" />
     <Content Include="Views\Product\ProductTemplate.Simple.cshtml" />
-    <Content Include="Views\Product\ProductTierPrices.cshtml" />
-    <Content Include="Views\Product\RelatedProducts.cshtml" />
-    <Content Include="Views\Product\ReviewOverview.cshtml" />
+    <Content Include="Views\Product\Partials\ProductTierPrices.cshtml" />
+    <Content Include="Views\Product\Partials\RelatedProducts.cshtml" />
+    <Content Include="Views\Product\Partials\ReviewOverview.cshtml" />
     <Content Include="Views\Product\Reviews.cshtml" />
-    <Content Include="Views\Product\ShareButton.cshtml" />
-    <Content Include="Views\Product\_AddToCart.cshtml" />
-    <Content Include="Views\Product\_Attributes.cshtml" />
-    <Content Include="Views\Product\_BackInStockSubscription.cshtml" />
-    <Content Include="Views\Product\_BundleItems.cshtml" />
-    <Content Include="Views\Product\_BundleItemsAddToCart.cshtml" />
-    <Content Include="Views\Product\_GiftCardInfo.cshtml" />
-    <Content Include="Views\Product\_PictureGallery.cshtml" />
-    <Content Include="Views\Product\_ProductTemplate.Grouped.AssociatedProduct.cshtml" />
-    <Content Include="Views\Product\_ReviewHelpfulness.cshtml" />
-    <Content Include="Views\Product\_SKU_Man_Stock.cshtml" />
+    <Content Include="Views\Product\Partials\ShareButton.cshtml" />
+    <Content Include="Views\Product\Partials\_AddToCart.cshtml" />
+    <Content Include="Views\Product\Partials\_Attributes.cshtml" />
+    <Content Include="Views\Product\Partials\_BackInStockSubscription.cshtml" />
+    <Content Include="Views\Product\Partials\_BundleItems.cshtml" />
+    <Content Include="Views\Product\Partials\_BundleItemsAddToCart.cshtml" />
+    <Content Include="Views\Product\Partials\_GiftCardInfo.cshtml" />
+    <Content Include="Views\Product\Partials\_PictureGallery.cshtml" />
+    <Content Include="Views\Product\Partials\_ProductTemplate.Grouped.AssociatedProduct.cshtml" />
+    <Content Include="Views\Product\Partials\_ReviewHelpfulness.cshtml" />
+    <Content Include="Views\Product\Partials\_SKU_Man_Stock.cshtml" />
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Profile\Info.cshtml" />
     <Content Include="Views\Profile\Posts.cshtml" />
