--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1903,6 +1903,8 @@
     <Content Include="Views\Shared\Partials\Product.List.Item.Rating.cshtml" />
     <Content Include="Views\Shared\Partials\Product.List.Item.Brand.cshtml" />
     <Content Include="Views\Shared\Partials\Product.List.Item.Price.cshtml" />
+    <Content Include="Views\Shared\Partials\Product.List.Item.Buttons.cshtml" />
+    <Content Include="Views\Shared\Partials\Product.List.Item.Variants.cshtml" />
     <None Include="Web.EFMigrations.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
