--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -439,6 +439,7 @@
     <Compile Include="Search\NullIndexStore.cs" />
     <Compile Include="Search\Filter\SearchFilter.cs" />
     <Compile Include="Search\SearchDocumentType.cs" />
+    <Compile Include="Search\SearchEnums.cs" />
     <Compile Include="Search\SearchQuery.cs" />
     <Compile Include="Search\SearchSettings.cs" />
     <Compile Include="Search\SearchSort.cs" />
