--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -168,12 +168,12 @@
     <urlCompression doStaticCompression="false" doDynamicCompression="true" />
     <security>
       <requestFiltering>
-        <!--<hiddenSegments>
+        <hiddenSegments>
           <remove segment="ClearScript.V8" />
           <remove segment="LibSassHost.Native" />
           <add segment="ClearScript.V8" />
           <add segment="LibSassHost.Native" />
-        </hiddenSegments>-->
+        </hiddenSegments>
       </requestFiltering>
     </security>
   </system.webServer>
@@ -245,11 +245,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.8.23.0" newVersion="1.8.23.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.138.0" newVersion="1.9.138.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="JavaScriptEngineSwitcher.Core" publicKeyToken="c608b2a8cc9e4472" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.0.0" newVersion="2.2.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -313,7 +313,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="LibSassHost" publicKeyToken="3e24e88796a38e46" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-0.5.2.0" newVersion="0.5.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-0.6.1.0" newVersion="0.6.1.0" />
       </dependentAssembly>
     </assemblyBinding>
     
