--- a/SmartStoreNET.Tasks.Targets
+++ b/SmartStoreNET.Tasks.Targets
@@ -28,13 +28,9 @@
 		<WebPluginsFolder>$(WebFolder)\Plugins</WebPluginsFolder>
 		<WebThemesFolder>$(WebFolder)\Themes</WebThemesFolder>
 
-		<CompileFolder>$(BuildFolder)\Compile</CompileFolder>
-		<WebSitesFolder>$(CompileFolder)\_PublishedWebsites</WebSitesFolder>
 		<StageFolder>$(BuildFolder)\Web</StageFolder>
 		<MsDeployFolder>$(BuildFolder)\MsDeploy</MsDeployFolder>
 		<PrecompiledFolder>$(BuildFolder)\Precompiled</PrecompiledFolder>
-		<ProfilingFolder>$(BuildFolder)\Profiling</ProfilingFolder>
-		<GalleryFolder>$(BuildFolder)\Gallery</GalleryFolder>
 
 		<TransformInputFile>$(WebFolder)\Web.config</TransformInputFile>
 		<TransformFile>$(WebFolder)\Web.$(Configuration).config</TransformFile>
@@ -105,6 +101,9 @@
 		  	<SqlCe-Native-Binaries-amd64 Include="$(SqlCeFolder)\amd64\**\*"/>
 		  	<Msvcp140-Binaries-x86 Include="$(Msvcp140Folder)\x86\**\*"/>
 		  	<Msvcp140-Binaries-amd64 Include="$(Msvcp140Folder)\amd64\**\*"/>
+		  	<V8-Native-Binaries-x86 Include="$(SrcFolder)\packages\JavaScriptEngineSwitcher.V8.Native.win-x86.2.2.0\runtimes\win7-x86\native\**\*"/>
+		  	<V8-Native-Binaries-x64 Include="$(SrcFolder)\packages\JavaScriptEngineSwitcher.V8.Native.win-x64.2.2.0\runtimes\win7-x64\native\**\*"/>
+		  	<LibSass-Native-Binaries Include="$(SrcFolder)\packages\LibSassHost.0.6.1\content\LibSassHost.Native\**\*"/>
 		</ItemGroup>
 
 		<!-- delete the build folder -->
@@ -152,13 +151,14 @@
 		<!--<RemoveDir Directories="$(StageFolder)\Media\uploaded\" />
 		<Copy SourceFiles="@(UploadedImages)" DestinationFolder="$(StageFolder)\Media\uploaded\%(RecursiveDir)" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" />-->
 
-		<!-- copy SQL Compact native binaries-->
+		<!-- copy native binaries-->
 		<Copy SourceFiles="@(SqlCe-Native-Binaries-x86)" DestinationFolder="$(StageFolder)\bin\x86\%(RecursiveDir)" />
 		<Copy SourceFiles="@(SqlCe-Native-Binaries-amd64)" DestinationFolder="$(StageFolder)\bin\amd64\%(RecursiveDir)" />
-		
-		<!-- copy Visual C++ runtime files -->
 		<Copy SourceFiles="@(Msvcp140-Binaries-x86)" DestinationFolder="$(StageFolder)\bin\x86\%(RecursiveDir)" />
 		<Copy SourceFiles="@(Msvcp140-Binaries-amd64)" DestinationFolder="$(StageFolder)\bin\amd64\%(RecursiveDir)" />
+		<Copy SourceFiles="@(V8-Native-Binaries-x86)" DestinationFolder="$(StageFolder)\bin\x86\%(RecursiveDir)" />
+		<Copy SourceFiles="@(V8-Native-Binaries-x64)" DestinationFolder="$(StageFolder)\bin\x64\%(RecursiveDir)" />
+		<Copy SourceFiles="@(LibSass-Native-Binaries)" DestinationFolder="$(StageFolder)\bin\LibSassHost.Native\%(RecursiveDir)" />
 
 		<!-- transform config files -->
 		<TransformXml Source="$(TransformInputFile)" Transform="$(TransformFile)" Destination="$(TransformOutputFile)" />
